0 - Add note and template

--- a/BinarySearch.ipynb
+++ b/BinarySearch.ipynb
@@ -9,8 +9,310 @@
    "source": [
     "# Binary Search Template\n",
     "class Solution:\n",
-    "    # param nums: The integer array\n",
-    "    # param target: Target number to find"
+    "    # @param nums: The integer array\n",
+    "    # @param target: Target number to find\n",
+    "    # @return the first position of target in nums, position start from 0\n",
+    "    def binarySearch(self, nums, target):\n",
+    "        if not nums:\n",
+    "            return -1\n",
+    "        \n",
+    "        start, end = 0, len(nums) - 1\n",
+    "        # 用 start + 1 < end 而不是 start < end 的目的是為了避免死循環\n",
+    "        # 在 first position of target 的情況下不會出現死循環\n",
+    "        # 但是在 last position of target 的情況下會出現死循環\n",
+    "        # 範例: nums = [1, 1]  target = 1\n",
+    "        # 為了統一模板，我們都採用staart + 1 < end，就寶正不會出現死循環\n",
+    "        while start + 1 < end:\n",
+    "            # python 沒有 overflow 的問題，直接 // 2 就可以了\n",
+    "            # java 和 c++ 最好寫成 mid = start + (end - start) / 2\n",
+    "            # 防止在 start = 2^31 - 1, end = 2^31 - 1 的情況下出現加法 overflow\n",
+    "            mid = (start + end) // 2\n",
+    "            \n",
+    "            # >, =, < 的邏輯先分開寫，然後再看看 = 的情況是否能合併到其他分支裡\n",
+    "            if nums[mid] < target:\n",
+    "                # 寫作 start = mid + 1 也是正確的\n",
+    "                # 只是可以偷懶不寫，因為不寫也沒問題，不回影響時間複雜度\n",
+    "                # 不寫的好處是，萬一你不小心寫成了mid - 1 你就錯了\n",
+    "                start = mid\n",
+    "            elif nums[mid] == target:\n",
+    "                end = mid\n",
+    "            else:\n",
+    "                # 寫作 end = mid - 1 也是正確的\n",
+    "                # 只是可以偷懶不寫，因為不寫也沒問題，不會影響時間複雜度\n",
+    "                # 不寫的好處是，萬一你不小心寫成了mid + 1 你就錯了\n",
+    "                end = mid\n",
+    "            #或是最後兩個合併\n",
+    "            # else:\n",
+    "            #     end = mid\n",
+    "        \n",
+    "        # 因為上面的循環退出條件是 start + 1 < end\n",
+    "        # 因此這裡循環結識的時候，start 和 end 的關係是相鄰關係 (1和2, 3和4這種)\n",
+    "        # 因此需要再單獨判斷 start 和 end這兩個數誰是我們要的答案\n",
+    "        # 如果是找first position of target 就先看start，否則就先看end\n",
+    "        if nums[start] == target:\n",
+    "            return start\n",
+    "        if nums[end] == target:\n",
+    "            return end\n",
+    "        \n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f811648",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Search in a Big Sorted Array\n",
+    "# 可以視為無限大\n",
+    "class Solution:\n",
+    "    \"\"\"\n",
+    "    @param: reader: An instance of ArrayReader\n",
+    "    @param: target: An integer\n",
+    "    @param: An integer which is the first index of target\n",
+    "    \"\"\"\n",
+    "    def searchBigSortedArray(self, reader, target):\n",
+    "        # 用一直倍增的方式找end \n",
+    "        # 不可能會超過2K，因為最壞情況是k-1還是< target，k-1的2倍也只有2k-2\n",
+    "        # 最壞也是log(2k - 2)可以找到右端點  ->  也就是log(k)的時間複雜度\n",
+    "        # reader.get(1 - 1)  第一個數的位置\n",
+    "        # reader.get(2 - 1)  第二個數的位置\n",
+    "        # reader.get(4 - 1)\n",
+    "        # reader.get(8 - 1)\n",
+    "        # ...\n",
+    "        index = 0\n",
+    "        \n",
+    "        # 找end 的位置\n",
+    "        while reader.get(index) < target:\n",
+    "            index = index * 2 + 1\n",
+    "        start, end = 0, index\n",
+    "        \n",
+    "        while start + 1 < end:\n",
+    "            mid = start + (end - start) // 2\n",
+    "            if reader.get(mid) < target:\n",
+    "                start = mid\n",
+    "            else:\n",
+    "                end = mid\n",
+    "        \n",
+    "        if reader.get(start) == target:\n",
+    "            return start\n",
+    "\n",
+    "        if reader.get(end) == end:\n",
+    "            return end\n",
+    "        \n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10ce9d52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find K Closest Elements\n",
+    "class Solution:\n",
+    "    \"\"\"\n",
+    "    @param A: an integer array\n",
+    "    @param target: An integer\n",
+    "    @param k: An integer\n",
+    "    @return: an integer array\n",
+    "    \"\"\"\n",
+    "    def kClosestNumbers(self, A, target, k):\n",
+    "        # 找到 A[left] < target, A[right] >= target\n",
+    "        # 也就是最接近target 的兩個數，他們肯定是相鄰的\n",
+    "        right = self.find_upper_closest(A, target)\n",
+    "        left = right - 1\n",
+    "        \n",
+    "        # 兩根指針從中間往兩邊擴展，依次找到最接近的 k 個數\n",
+    "        results = []\n",
+    "        for _ in range(k):\n",
+    "            if self.is_left_closer(A, target, left, right):\n",
+    "                results.append(A[left])  #左邊接近就左邊拿出來，左指針往左繼續加\n",
+    "                left -= 1\n",
+    "            else:\n",
+    "                results.append(A[right])  #右邊接近就右邊拿出來，右指針往右繼續加\n",
+    "                right += 1\n",
+    "        \n",
+    "        return results\n",
+    "    \n",
+    "    def find_upper_closest(self, A, target):\n",
+    "        # find the first number >= target in A\n",
+    "        start, end = 0, len(A) - 1\n",
+    "        \n",
+    "        while start + 1 < end:\n",
+    "            mid = (start + end) // 2\n",
+    "            if A[mid] >= target:\n",
+    "                end = mid\n",
+    "            else:\n",
+    "                start = mid\n",
+    "        \n",
+    "        if A[start] == target:\n",
+    "            return start\n",
+    "        \n",
+    "        if A[end] == target:\n",
+    "            return end\n",
+    "        \n",
+    "        # 找不到的情況\n",
+    "        return end + 1\n",
+    "    \n",
+    "    def is_left_closer(self, A, target, left, right):\n",
+    "        if left < 0:     # 左邊出列了，絕對不是左邊近\n",
+    "            return False\n",
+    "        if right >= len(A):  # 右邊出列了，絕對是左邊近\n",
+    "            return True\n",
+    "        return target - A[left] <= A[right] - target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bae94a68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Maximum Number in Mountain Sequence\n",
+    "class Solution:\n",
+    "    \"\"\"\n",
+    "    @param nums: a mountain sequence which increase firstly and the decrease\n",
+    "    @return: then mountain top\n",
+    "    \"\"\"\n",
+    "    def mountainSequence(self, nums):\n",
+    "        if not nums:\n",
+    "            return -1\n",
+    "        \n",
+    "        # find the first i so that nums[i] > nums[i + 1]\n",
+    "        start, end = 0, len(nums) - 1\n",
+    "        while start + 1 < end:\n",
+    "            mid = (start + end) // 2\n",
+    "            # mid + 1 保證不會越界\n",
+    "            # 因為start 和 end 是 start + 1 < end\n",
+    "            if nums[mid] > nums[mid + 1]:\n",
+    "                end = mid\n",
+    "            else:\n",
+    "                start = mid\n",
+    "        \n",
+    "        return max(nums[start], nums[end])\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b38a9fbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find Minimum in Rotated Sorted Array\n",
+    "class Solution:\n",
+    "    # @param nums: a rotated sorted array\n",
+    "    # @return: the minimum number in the array\n",
+    "    def finMin(self, nums):\n",
+    "        if not nums:\n",
+    "            return -1\n",
+    "        \n",
+    "        start, end = 0, len(nums) - 1\n",
+    "        target = nums[-1]\n",
+    "        \n",
+    "        while start + 1 < end:          # 用來控制區間大小\n",
+    "            mid = (start + end) // 2\n",
+    "            if nums[mid] <= target:     # 如果mid位置上的數字 <= 最右端的數字時，區間向左移動\n",
+    "                end = mid\n",
+    "            else:\n",
+    "                start = mid\n",
+    "        \n",
+    "        return min(nums[start], nums[end])       # 最終返回start和end位置上較小的數字即可"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c9a435f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Search in Rotated Sorted Array\n",
+    "\"\"\"    \n",
+    "@param A: an integer rotated sorted array\n",
+    "@param target: an integer to be searched\n",
+    "@return: an integer\n",
+    "\"\"\"\n",
+    "def search(self, A, target):\n",
+    "    if not A:\n",
+    "        return -1\n",
+    "    \n",
+    "    start, end = 0, len(A) - 1\n",
+    "    while start + 1 < end:\n",
+    "        mid = (start + end) // 2\n",
+    "        if A[mid] >= A[start]:\n",
+    "            if A[start] <= target <= A[mid]:\n",
+    "                end = mid\n",
+    "            else:\n",
+    "                start = mid\n",
+    "        else:\n",
+    "            if A[mid] <= target <= A[end]:\n",
+    "                start = mid\n",
+    "            else:\n",
+    "                end = mid\n",
+    "    \n",
+    "    if A[start] == target:\n",
+    "        return start\n",
+    "    if A[end] == target:\n",
+    "        return end\n",
+    "    \n",
+    "    return -1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d94ac53b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wood Cut\n",
+    "class Solution:\n",
+    "    \"\"\"\n",
+    "    @param L: Given n pieces of wood with lenght L[i]\n",
+    "    @param k: An integer\n",
+    "    @return: Tha maximum length of the small piece\n",
+    "    \"\"\"\n",
+    "    def woodCut(self, L, k):\n",
+    "        if not L:\n",
+    "            return 0\n",
+    "        \n",
+    "        start, end = 1, max(L)\n",
+    "        # or\n",
+    "        # start, end = 1, min((max(L), sum(L) // k))\n",
+    "        # start, end = 1, sum(L) // k\n",
+    "        while start + 1 < end:\n",
+    "            mid = (start + end) // 2\n",
+    "            if self.get_pieces(L, mid) >= k:\n",
+    "                start = mid\n",
+    "            else:\n",
+    "                end = mid\n",
+    "        \n",
+    "        # find the last of position so check index end first\n",
+    "        if self.get_pieves(L, end) >= k:\n",
+    "            return end\n",
+    "\n",
+    "        if self.get_pieces(L, start) >= k:\n",
+    "            return start\n",
+    "        \n",
+    "        return 0\n",
+    "    \n",
+    "    def get_pieces(self, L, length):\n",
+    "        pieces = 0\n",
+    "        # O(n) time but O(1) space\n",
+    "        for l in L:\n",
+    "            pieces += l // length\n",
+    "        # O(n) time and O(n) space\n",
+    "        # return sum(l // length for l in L)\n",
+    "        \n",
+    "        return pieces"
    ]
   }
  ],
