2 - Add new note

--- a/BinarySearch.ipynb
+++ b/BinarySearch.ipynb
@@ -155,7 +155,9 @@
     "            return end\n",
     "        \n",
     "        # 找不到的情況\n",
-    "        return end + 1\n",
+    "        # return end + 1\n",
+    "        # Should be end\n",
+    "        return end\n",
     "    \n",
     "    def is_left_closer(self, A, target, left, right):\n",
     "        if left < 0:     # 左邊出列了，絕對不是左邊近\n",
