--- a/BinarySearch.ipynb
+++ b/BinarySearch.ipynb
@@ -270,6 +270,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "c1411ade",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find Peak Element\n",
+    "class Solution:\n",
+    "    # @param A: An integers list\n",
+    "    # @return: return any of peak positions\n",
+    "    def findPeak(self, A):\n",
+    "        start, end = 0, len(A) - 2\n",
+    "        \n",
+    "        while start + 1 < end:\n",
+    "            mid = (start + end) // 2\n",
+    "            \n",
+    "            if A[mid] < A[mid - 1]:\n",
+    "                end = mid\n",
+    "            \n",
+    "            elif A[mid] < A[mid + 1]:\n",
+    "                start = mid\n",
+    "            \n",
+    "            # A[mid] >= A[mid - 1] and A[mid] >= A[mid + 1]\n",
+    "            else:\n",
+    "                return mid\n",
+    "        \n",
+    "        if A[start] > A[end]:\n",
+    "            return start\n",
+    "        \n",
+    "        else:\n",
+    "            return end\n",
+    "    \n",
+    "sol = Solution()\n",
+    "result = sol.findPeak([1, 2, 1, 3, 4, 5, 7, 6])\n",
+    "print(result)\n",
+    "result = sol.findPeak([1,2,3,4,1])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "d94ac53b",
    "metadata": {},
@@ -325,7 +374,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
