--- a/BinarySearch.ipynb
+++ b/BinarySearch.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c1411ade",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,20 @@
      "output_type": "stream",
      "text": [
       "6\n",
-      "3\n"
+      "3\n",
+      "0\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 34\u001b[0m\n\u001b[1;32m     32\u001b[0m result \u001b[38;5;241m=\u001b[39m sol\u001b[38;5;241m.\u001b[39mfindPeak([\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n\u001b[0;32m---> 34\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43msol\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfindPeak\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n",
+      "Cell \u001b[0;32mIn[4], line 21\u001b[0m, in \u001b[0;36mSolution.findPeak\u001b[0;34m(self, A)\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;66;03m# A[mid] >= A[mid - 1] and A[mid] >= A[mid + 1]\u001b[39;00m\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     19\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m mid\n\u001b[0;32m---> 21\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mA\u001b[49m\u001b[43m[\u001b[49m\u001b[43mstart\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m>\u001b[39m A[end]:\n\u001b[1;32m     22\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m start\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -289,7 +302,10 @@
     "    # @param A: An integers list\n",
     "    # @return: return any of peak positions\n",
     "    def findPeak(self, A):\n",
-    "        start, end = 0, len(A) - 2\n",
+    "        if not A:\n",
+    "            return -1\n",
+    "        \n",
+    "        start, end = 0, len(A) - 1\n",
     "        \n",
     "        while start + 1 < end:\n",
     "            mid = (start + end) // 2\n",
@@ -314,6 +330,10 @@
     "result = sol.findPeak([1, 2, 1, 3, 4, 5, 7, 6])\n",
     "print(result)\n",
     "result = sol.findPeak([1,2,3,4,1])\n",
+    "print(result)\n",
+    "result = sol.findPeak([1])\n",
+    "print(result)\n",
+    "result = sol.findPeak([])\n",
     "print(result)"
    ]
   },
